<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SpeechRecognitionMRL</string>
    <string name="versionname">2015.05.01</string>
    <string name="main_description">Click the Button, then start speaking</string>
    <string name="main_speakButton">CLICK ME!</string>
    <string name="main_action_settings">Settings</string>
    <string name="main_action_about">About</string>
    <string name="err_norecogfound">Recognizer not present</string>
    <string name="intent_speechrecog">Speech Recognition with MRL</string>
    <string name="settings_automode_tit">Auto Mode</string>
    <string name="settings_automode_sum">Automatic is Magic</string>
    <string name="settings_ip_tit">IP</string>
    <string name="settings_ip_sum">Enter the IP of the MRL-host</string>
    <string name="settings_servicename_tit">service name</string>
    <string name="settings_servicename_sum">Enter the instance name of your ProgramAB-service</string>
    <string name="settings_port_tit">port</string>
    <string name="settings_port_sum">Enter the port of the AndroidSpeechRecognition-service</string>
    <string name="settings_mode_tit">mode</string>
    <string name="settings_mode_sum">Select how the result is send to the host-instance</string>
    <string name="settings_displayresponse_tit">display response</string>
    <string name="settings_displayresponse_sum">Should the response from ProgramAB be displayed?</string>
    <string name="settings_socketmode_tit">socket mode</string>
    <string name="settings_socketmode_sum">Allows MRL to work closer together with this App.</string>
    <string name="settings_updatemode_tit">Check for Updates</string>
    <string name="settings_updatemode_sum">Set, when the App should look for Updates</string>
    <string name="settings_checkforupdatesbutton_tit">Check for Updates NOW</string>
    <string name="settings_checkforupdatesbutton_sum">Search for Updates manually</string>
    <string name="about1">Version: </string>
    <string name="about2">\n\nDo you like this App?\nLet me know!\n\nAnd if you don\'t know MRL, yet,\nhead over to myrobotlab.org!</string>
    <string name="AutoMode">AutoMode</string>
</resources>
