<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="SETUP" >
        <EditTextPreference
            android:key="ip"
            android:title="@string/settings_ip_tit"
            android:summary="@string/settings_ip_sum"
            android:defaultValue="192.168.178.555"
        />
        <EditTextPreference
            android:key="port"
            android:title="@string/settings_port_tit"
            android:summary="@string/settings_port_sum"
            android:defaultValue="5684"
        />
    </PreferenceCategory>
    <PreferenceCategory android:title="CONFIG" >
        <ListPreference
            android:key="mode"
            android:title="@string/settings_mode_tit"
            android:summary="@string/settings_mode_sum"
            android:entries="@array/settings_mode_entries"
            android:entryValues="@array/settings_mode_entryvalues"
            android:defaultValue="0"
        />
    </PreferenceCategory>
    <PreferenceCategory android:title="UPDATES" >
        <ListPreference
            android:key="updatemode"
            android:title="@string/settings_updatemode_tit"
            android:summary="@string/settings_updatemode_sum"
            android:entries="@array/settings_updatemode_entries"
            android:entryValues="@array/settings_updatemode_entryvalues"
            android:defaultValue="0"
        />
        <Preference android:key="checkforupdatesbutton"
                    android:title="@string/settings_checkforupdatesbutton_tit"
                    android:summary="@string/settings_checkforupdatesbutton_sum"
        />
    </PreferenceCategory>
</PreferenceScreen>